--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/JosquinH/PresentationGraphQL#readme",
   "dependencies": {
+    "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
