--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
   }
 }
