--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-server-express": "^3.13.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nexus": "^1.3.0",
     "uuid": "^9.0.1"
   }
 }
